--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<li> Local stability/instability analysis of quorum-sensing
 		  networks in a multi-cell environment
 		  <br>
-		  <a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6060320">[IEEE Xplore]</a>
+		  <a href="https://www.jstage.jst.go.jp/article/jcmsi/7/3/7_133/_article">[J-Stage]</a>
 	      </ul>
 	  </ul>
 	  <h2 id="demos">Demos</h2>
@@ -168,19 +168,6 @@
 	       height="1" alt="logo_banner"></img><br>
 	  <h2 id="publications"><font color="#0000CD">Publications</font></h2>
 	  <ul>
-	    <li><h4>Dissertations</h4>
-	      <ol>
-		<li> Master's Thesis:
-		  <br>
-		  <U>Tomohiko Nakamura</U>, <b>"Fast Score Following to Acoustic Signal of Musical Performance with Errors, Repeats and Skips,"</b>, The university of Tokyo, Mar, 2013, in Japanese.
-		</li>
-		<li> Bachelor's Thesis: <br>
-		  <U>Tomohiko Nakamkura</U>, <b>"Local Stability Analysis
-		    of Cell-to-Cell Networks with Cyclic Gene Regulatory Networks,"</b> The university of Tokyo, Mar, 2011, in Japanese.
-		</li>
-	      </ol>
-	      <br>
-	    </li>
 	    <li><h4>Journals</h4>
 	      <ol>
 		<li><U>Tomohiko Nakamura</U>, Eita Nakamura, Shigeki Sagayama, <b>"Real-Time Audio-to-Score Alignment of Music Performances Containing Errors and Arbitrary Repeats and Skips,"</b> IEEE/ACM Transactions on Audio, Speech and Language Processing (IEEE/ACM TASLP), (accepted for publication).
@@ -450,6 +437,19 @@
 		</li>
 	      </ol>
 	  </ul>
+	    <li><h4>Dissertations</h4>
+	      <ol>
+		<li> Master's Thesis:
+		  <br>
+		  <U>Tomohiko Nakamura</U>, <b>"Fast Score Following to Acoustic Signal of Musical Performance with Errors, Repeats and Skips,"</b>, The university of Tokyo, Mar, 2013, in Japanese.
+		</li>
+		<li> Bachelor's Thesis: <br>
+		  <U>Tomohiko Nakamkura</U>, <b>"Local Stability Analysis
+		    of Cell-to-Cell Networks with Cyclic Gene Regulatory Networks,"</b> The university of Tokyo, Mar, 2011, in Japanese.
+		</li>
+	      </ol>
+	      <br>
+	    </li>
 	  <h2 id="awards">Awards and Funds</h2>
 	  <ol>
 	    <li>2015年計測自動制御学会 論文賞（武田賞）
