--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
 	      <ol>
 		<li><U>Tomohiko Nakamura</U>, Eita Nakamura, Shigeki Sagayama, <b>"Real-Time Audio-to-Score Alignment of Music Performances Containing Errors and Arbitrary Repeats and Skips,"</b> IEEE/ACM Transactions on Audio, Speech and Language Processing (IEEE/ACM TASLP), (accepted for publication).
 		  <br>
-		  <a href="http://dx.doi.org/10.1109/TASLP.2015.2507862">[IEEE Xplore]</a>.
+		  <a href="http://dx.doi.org/10.1109/TASLP.2015.2507862">[IEEE Xplore]</a>, 
+		  [arXiv:<a href="http://arxiv.org/abs/1512.07748">1512.07748</a>].
 		</li>
 		<li>亀岡 弘和, <U>中村 友彦</U>, 高宗 典玄, <b>"音楽音響信号処理技術の最先端,"</b>　電子情報通信学会誌, vol. 98, no. 6, pp. 467--474, Jun. 2015.
 		  <br>
