--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
 	  <ul>
 	    <li><h4>Journals</h4>
 	      <ol>
-		<li><U>Tomohiko Nakamura</U>, Eita Nakamura, Shigeki Sagayama, <b>"Real-Time Audio-to-Score Alignment of Music Performances Containing Errors and Arbitrary Repeats and Skips,"</b> IEEE/ACM Transactions on Audio, Speech and Language Processing (IEEE/ACM TASLP), (accepted for publication).
+		<li><U>Tomohiko Nakamura</U>, Eita Nakamura, Shigeki Sagayama, <b>"Real-Time Audio-to-Score Alignment of Music Performances Containing Errors and Arbitrary Repeats and Skips,"</b> IEEE/ACM Transactions on Audio, Speech and Language Processing (IEEE/ACM TASLP), vol. 24, issue 2, pp. 329--339, Feb. 2016 (accepted for publication).
 		  <br>
-		  <a href="http://dx.doi.org/10.1109/TASLP.2015.2507862">[IEEE Xplore]</a>, 
-		  [arXiv:<a href="http://arxiv.org/abs/1512.07748">1512.07748</a>].
+		  [arXiv:<a href="http://arxiv.org/abs/1512.07748">1512.07748</a>, <a href="http://dx.doi.org/10.1109/TASLP.2015.2507862">IEEE Xplore</a>].
 		</li>
 		<li>亀岡 弘和, <U>中村 友彦</U>, 高宗 典玄, <b>"音楽音響信号処理技術の最先端,"</b>　電子情報通信学会誌, vol. 98, no. 6, pp. 467--474, Jun. 2015.
 		  <br>
@@ -186,8 +185,7 @@
 		    Quorum Sensing,"</b> <em>SICE Journal of Control,
 		    Measurement, and System Integration (JCMSI)</em>, vol. 7, no. 3, pp. 133-140, May, 2014.
 		  <br>
-		  <a href="https://www.jstage.jst.go.jp/article/jcmsi/7/3/7_133/_article">[J-Stage]</a>,
-		  <a href="http://www.sice.or.jp/JCMSI/cover7-3.pdf">[Table of Contents]</a>.
+		  [<a href="https://www.jstage.jst.go.jp/article/jcmsi/7/3/7_133/_article">J-Stage</a>].
 		  <br>
 		  <font color="#0000CD">[2015年計測自動制御学会 論文賞（武田賞）]</font>
 		</li>
@@ -195,19 +193,21 @@
 		  Nobutaka Ono and Shigeki Sagayama, <b>"Outer-Product Type
 		    Hidden Markov Model and Polyphonic MIDI Score Following,"</b>Journal of New Music Research (JNMR), 2014.
 		  <br>
-		  <a href="http://www.tandfonline.com/doi/full/10.1080/09298215.2014.884145">[Online ver.]</a>
+		  [arXiv:<a href="http://arxiv.org/abs/1404.2313">1404.2313</a>, <a href="http://www.tandfonline.com/doi/full/10.1080/09298215.2014.884145">Journal Site</a>].
 		</li>
 	      </ol>
 	      <br>
 	    </li>
 	    <li><h4>International Conferences and Workshops</h4>
 	      <ol>
-		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"L_p-Norm Non-Negative Matrix Factorization and Its Application to Singing Voice Enhancement,"</b> <em>Proc. IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 2115--2119, MLSP-P4.1, Apr. 2015.
+		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <em>TBA</em>, <em> Proc. 41st IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted, Mar. 2016.
+		</li>
+		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"L_p-Norm Non-Negative Matrix Factorization and Its Application to Singing Voice Enhancement,"</b> <em>Proc. 40th IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 2115--2119, MLSP-P4.1, Apr. 2015.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2015ICASSP04.pdf">[PDF file]</a>.
 		</li>
-		<li><U>Tomohiko Nakamura</U>, Kotaro Shikata, Norihiro Takamune and Hirokazu Kameoka, <b>"Harmonic-Temporal Factor Decomposition Incorporating Music Prior Information for Informed Monaural Souce Separation,"</b> <em>Proc. the 15th International Society for Music Information Retrieval Conference (ISMIR2014),</em> pp. 623--628, Oct. 2014.
+		<li><U>Tomohiko Nakamura</U>, Kotaro Shikata, Norihiro Takamune and Hirokazu Kameoka, <b>"Harmonic-Temporal Factor Decomposition Incorporating Music Prior Information for Informed Monaural Souce Separation,"</b> <em>Proc. 15th International Society for Music Information Retrieval Conference (ISMIR2014),</em> pp. 623--628, Oct. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2014ISMIR10.pdf">[PDF file]</a>,
@@ -239,7 +239,7 @@
 		  Kameoka, Kazuyoshi Yoshii and Masataka
 		  Goto, <b>"Timbre Replacement of Harmonic
 		    and Drum Components for Music Audio
-		    Signals,"</b> <em>Proc. IEEE International
+		    Signals,"</b> <em>Proc. 2014 IEEE International
 		    Conference on Acoustics, Speech and
 		    Signal Processing (ICASSP2014)</em>, pp. 7520--7524, AASP-P10.7,
 		  May, 2014.
@@ -254,7 +254,7 @@
 		  <U>Tomohiko Nakamura</U> and Hirokazu
 		  Kameoka, <b>"Underdetermined Blind
 		    Separation and Tracking of Moving Sources
-		    based on DOA-HMM,"</b> <em>Proc. IEEE International
+		    based on DOA-HMM,"</b> <em>Proc. 2014 IEEE International
 		    Conference on Acoustics, Speech and
 		    Signal Processing (ICASSP2014)</em>,
 		  SAM-L2, May, 2014.
@@ -265,7 +265,7 @@
 		<li>Shigeki Sagayama, <U>Tomohiko Nakamura</U>, Eita Nakamura, Yasuyuki Saito, Hirokazu Kameoka and Nobutaka Ono, <b>"Automatic Music Accompaniment Allowing Errors and Arbitrary Repeats and Jumps,"</b> <em>Proc. Meetings on Acoustics (POMA)</em>, vol, 21, 035003, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  [<a href="http://scitation.aip.org/content/asa/journal/poma/21/1/10.1121/1.4904932">Available online</a>],
+		  [<a href="http://scitation.aip.org/content/asa/journal/poma/21/1/10.1121/1.4904932">Proceeding</a>],
 		  <font color="#cc0099">(Invited Talk)</font>.
 		</li>
 		<li><U>Tomohiko Nakamura</U>, Eita Nakamura
@@ -276,10 +276,8 @@
 		  <em>Proc. Sound and Music Computing Conference (SMC2013)</em>, 166, Aug. 2013. 
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2013SMC08.pdf">[PDF file]</a>,
-		  &nbsp;
-		  <a href="http://smcnetwork.org/node/1754">[SMC Proceeding Page]</a>,
-		  &nbsp;
+		  [<a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2013SMC08.pdf">PDF file,</a>, <a href="http://smcnetwork.org/node/1754">Proceeding</a>]
+		  <br>
 		  <img src="./images/8beat.png" height="18px"></img>
 		  <a href="demo/automatic_accompaniment.html">[Demo Page]</a>,
 		  <br><font color="#0000CD">[Supported by the Telecommunications Advancement Foundation]</font>.
@@ -294,14 +292,14 @@
 		  Masahiro Nakano, Jonathan Le Roux, Hirokazu Kameoka, <U>Tomohiko
 		    Nakamura</U>, Nobutaka Ono and Shigeki Sagayama, <b>"Bayesian Nonparametric
 		    Spectrogram Modeling Based on Infinite Factorial Infinite Hidden Markov
-		    Model,"</b> <em>Proc. of IEEE Workshop on Applications of Signal Processing
+		    Model,"</b> <em>Proc. IEEE Workshop on Applications of Signal Processing
 		    to Audio and Acoustics (WASPAA)</em>, pp. 325-328, Oct. 2011. 
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/MNakano2011WASPAA10.pdf">[PDF file]</a>.
 		</li>
 		<li><U>Tomohiko Nakamura</U>, Shinji Hara and Yutaka Hori,
-		  <b>"Local Stability Analysis for a class of Quorum-Sensing Networks with Cyclic Gene Regulatory Networks,"</b> <em>Proc. of SICE Annual Conference</em>, Sep. 2011. 
+		  <b>"Local Stability Analysis for a class of Quorum-Sensing Networks with Cyclic Gene Regulatory Networks,"</b> <em>Proc. SICE Annual Conference</em>, Sep. 2011. 
 		  <br>
 		  <a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6060320">[IEEE Xplore]</a>,
 		  <br>
@@ -311,6 +309,10 @@
 	    </li>
 	    <li><h4>Domestic Conferences (in Japanese)</h4>
 	      <ol>
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"高速近似連続ウェーブレット変換による振幅スペクトログラムに対する実時間位相推定法,"</b> <em>日本音響学会2016年春季研究発表会</em>, to appear, Mar. 2016.
+		</li>
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分解に基づく欠損データ補間による声道スペクトル推定法の検討,"</b> <em>日本音響学会2016年春季研究発表会</em>, to appear, Mar. 2016.
+		</li>
 		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"全極スペクトルモデルと擬似周期信号モデルのウェーブレット変換表現を用いた多重音スペクトログラムの調波時間因子分解,"</b> <em>情報処理学会研究報告</em>, 2015-MUS-107 (50), May. 2015.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
