--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 	    </li>
 	    <li><h4>International Conferences and Workshops</h4>
 	      <ol>
-		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"Shifted and Convolutive Non-Negative Matrix Factorization for Monaural Audio Source Separation,"</b> <em> Proc. 41st IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted, Mar. 2016.
+		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"Shifted and Convolutive Source-Filter Non-Negative Matrix Factorization for Monaural Audio Source Separation,"</b> <em> Proc. 41st IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted, Mar. 2016.
 		</li>
 		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"L_p-Norm Non-Negative Matrix Factorization and Its Application to Singing Voice Enhancement,"</b> <em>Proc. 40th IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 2115--2119, MLSP-P4.1, Apr. 2015.
 		  <br>
