--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 		  <br><font color="#0000CD">[学生優秀発表賞]</font>.
 		</li>
 		<li>四方紘太郎, 高宗 典玄, <U>中村 友彦</U>,
-		  亀岡 弘和, <b>"調波時間因子分解に基づく音楽事前情報つき多重音解析,"</b> <em>日本音響学会春季研究発表会講演集</em>, 3-5-7,
+		  亀岡 弘和, <b>"調波時間因子分解に基づく音楽事前情報付き多重音解析,"</b> <em>日本音響学会春季研究発表会講演集</em>, 3-5-7,
 		  Mar. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
@@ -460,8 +460,8 @@
 	    <li>情報処理学会 2015年度山下記念研究賞
 	    <li>音学シンポジウム2015年ポスター賞
 	    <li>平成27年度学術研究振興会特別研究員DC2　採用内定（2014年10月）
-	    <li>立石科学技術振興財団による後期国際交流助成（2014年10月）
-	    <li>原総合知的通信システム基金による海外渡航旅費援助（2014年9月）
+	    <li>立石科学技術振興財団 後期国際交流助成（2014年10月）
+	    <li>原総合知的通信システム基金 第46回国際論文発表者助成（2014年9月）
 	    <li>日本音響学会2014年春季研究発表会 学生優秀発表賞
 	    <li>電気通信普及財団による海外渡航旅費援助(2013年8月)
 	    <li>情報処理学会第75回全国大会 学生奨励賞
