--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 	  <ul>
 	    <li><h4>Journals</h4>
 	      <ol>
-		<li><U>Tomohiko Nakamura</U>, Eita Nakamura, Shigeki Sagayama, <b>"Real-Time Audio-to-Score Alignment of Music Performances Containing Errors and Arbitrary Repeats and Skips,"</b> IEEE/ACM Transactions on Audio, Speech and Language Processing (IEEE/ACM TASLP), vol. 24, issue 2, pp. 329--339, Feb. 2016 (accepted for publication).
+		<li><U>Tomohiko Nakamura</U>, Eita Nakamura, Shigeki Sagayama, <b>"Real-Time Audio-to-Score Alignment of Music Performances Containing Errors and Arbitrary Repeats and Skips,"</b> IEEE/ACM Transactions on Audio, Speech and Language Processing (IEEE/ACM TASLP), vol. 24, issue 2, pp. 329--339, Feb. 2016.
 		  <br>
 		  [arXiv:<a href="http://arxiv.org/abs/1512.07748">1512.07748</a>, <a href="http://dx.doi.org/10.1109/TASLP.2015.2507862">IEEE Xplore</a>].
 		</li>
@@ -200,7 +200,7 @@
 	    </li>
 	    <li><h4>International Conferences and Workshops</h4>
 	      <ol>
-		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"Shifted and Convolutive Source-Filter Non-Negative Matrix Factorization for Monaural Audio Source Separation,"</b> <em> Proc. 41st IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted, Mar. 2016.
+		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"Shifted and Convolutive Source-Filter Non-Negative Matrix Factorization for Monaural Audio Source Separation,"</b> <em> Proc. 41st IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 489--493, Mar. 2016.
 		</li>
 		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"L_p-Norm Non-Negative Matrix Factorization and Its Application to Singing Voice Enhancement,"</b> <em>Proc. 40th IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 2115--2119, MLSP-P4.1, Apr. 2015.
 		  <br>
