--- a/index.html
+++ b/index.html
@@ -442,6 +442,10 @@
 	      </ol>
 	    <li><h4>Dissertations</h4>
 	      <ol>
+		<li> Ph.D Thesis:
+		  <br>
+		  <U>Tomohiko Nakamura</U>, <b>"Source-Filter Representation and Phase Estimation in Continuous Wavelet Transform in Continuous Wavelet Transform Domain for Monaural Music Audio Editing,"</b>, the University of Tokyo, Mar. 2016.
+		</li>
 		<li> Master's Thesis:
 		  <br>
 		  <U>Tomohiko Nakamura</U>, <b>"Fast Score Following to Acoustic Signal of Musical Performance with Errors, Repeats and Skips,"</b>, The university of Tokyo, Mar, 2013, in Japanese.
