--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
 	  </ul>
 	  <h2 id="awards">Awards and Funds</h2>
 	  <ol>
+	    <li>2015年度 東京大学 大学院情報理工学系研究科 研究科長賞
 	    <li>2015年計測自動制御学会 論文賞（武田賞）
 	    <li>情報処理学会 2015年度山下記念研究賞
 	    <li>音学シンポジウム2015年ポスター賞
