index pdf updated

--- a/index.html
+++ b/index.html
@@ -35,16 +35,30 @@
 	  <!-- left part: main contents -->
 	  <div id="left">
 	    <p>
+	      I received B.E., M.S. and Ph.D degrees from the
+	      University of Tokyo, Japan, in 2011, 2013 and 2016.
+	      <br>
+	      I am currently with Intelligent Systems Laboratory, SECOM.
+	      <!--
 	      Ph.D Student at <a href="http://www.cyb.ipc.i.u-tokyo.ac.jp/">Hara/Tsumura Laboratory</a> (Information Physics and Computing #5) and
 	      <A href="http://hil.t.u-tokyo.ac.jp/mklab/index.html" target="_blank">Kameoka Laboratory</A><br />
-	      <a href="http://www.i.u-tokyo.ac.jp/index_e.shtml">Graduate School of Information Science and Technology</a>, <a href="http://www.u-tokyo.ac.jp/en/">the University of Tokyo</a>
+	      <a href="http://www.i.u-tokyo.ac.jp/index_e.shtml">Graduate
+	      School of Information Science and
+	      Technology</a>, <a href="http://www.u-tokyo.ac.jp/en/">the
+	      University of Tokyo</a>
+	      -->
 	    </p>
 	    <U><h2>Contact</h2></U>
+	    <!--
 	    <A href="http://maps.google.com/?q=35.714347,139.759334" target="_blank">Room 606, Floor 6, Engineering Bldg. #14, Hongo 7-3-1, Bunkyo-ku, Tokyo 113-8656 Japan (Google maps&#x2197;)</A>
 	    <br>
 	    Tel & Fax: +81-3-5841-6892
 	    <br>
-	    email: Tomohiko_Nakamura[at]ipc.i.u-tokyo.ac.jp (replace [at] with "@")
+	    e-mail: Tomohiko_Nakamura[at]ipc.i.u-tokyo.ac.jp (replace
+	    [at] with "@")
+	    -->
+	    e-mail: Tomohiko.Nakamura.JP[at]ieee.org (replace [at]
+	    with "@")
 	  </div>	  
 	  <div id="right">
 	    <div class="imgbox_f">
@@ -95,8 +109,7 @@
 		<li> Multipitch estimation of acoustic signals of music. 
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a
-		     href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/MNakano2011WASPAA10.pdf">[PDF file]</a>
+		  <a href="pdf/paper/MNakano2011WASPAA10.pdf">[PDF file]</a>
 	      </ul>
 	    <li> Machine Learning, Pattern Recognition
 	      <ul>
@@ -143,7 +156,7 @@
 		(Supervised by <a href="http://www.kecl.ntt.co.jp/as/members/iwata/">Dr. Iwata</a>)
 	      </ul>
 	    </li>
-	    <li><em>Apr. 2013 - present:</em><br><ul>Ph.D. Course, Graduate School of Information Science and Technology, the University of Tokyo.<br>(Supervised by <a href="http://www.cyb.ipc.i.u-tokyo.ac.jp/members/hara/index.html">Prof. Hara</a> and <a href="http://hil.t.u-tokyo.ac.jp/~kameoka/index-e.html">Visiting Associate Prof. Kameoka</a>)</ul>
+	    <li><em>Apr. 2013 - Mar. 2016:</em><br><ul>Ph.D. Course, Graduate School of Information Science and Technology, the University of Tokyo.<br>(Supervised by <a href="http://www.cyb.ipc.i.u-tokyo.ac.jp/members/hara/index.html">Prof. Hara</a> and <a href="http://hil.t.u-tokyo.ac.jp/~kameoka/index-e.html">Visiting Associate Prof. Kameoka</a>)</ul>
 	    </li>
 	    <li>
 	      <em>Aug. 2013 - Sep. 2013:</em><br>
@@ -155,14 +168,22 @@
 	      </ul>
 	    </li>
 	    <li>
-	      <em>Apr. 2015 - present:</em><br>
+	      <em>Apr. 2015 - Mar. 2016:</em><br>
 	      <ul>
 		Research Fellow of Japan Society for the Promotion of Science (JSPS)
 	      </ul>
 	    </li>
+	    <li>
+	      <em>Apr. 2016 - present:</em><br>
+	      <ul>
+		Intelligent Systems Laboratory, SECOM
+	      </ul>
+	    </li>
 	  </ul>
 	  <p>
-	    Student member of IEEE Signal Processing Society, Information Processing Society of Japan (IPSJ), Acoustic Society of Japan (ASJ) and the Society of Instrument and Control Engineers (SICE).
+	    Member of IEEE Signal Processing Society (SPS),
+	    Information Processing Society of Japan (IPSJ) and
+	    Acoustic Society of Japan (ASJ).
 	  </p>
 	  <img src="images/bg_banner_grey.gif" width="700"
 	       height="1" alt="logo_banner"></img><br>
@@ -177,7 +198,7 @@
 		<li>亀岡 弘和, <U>中村 友彦</U>, 高宗 典玄, <b>"音楽音響信号処理技術の最先端,"</b>　電子情報通信学会誌, vol. 98, no. 6, pp. 467--474, Jun. 2015.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Kameoka2015IEICE06review.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Kameoka2015IEICE06review.pdf">[PDF file]</a>.
 		</li>
 		<li><U>Tomohiko Nakamura</U>, Yutaka Hori and
 		  Shinji Hara, <b>"Hierarchical Modeling and Local
@@ -201,16 +222,19 @@
 	    <li><h4>International Conferences and Workshops</h4>
 	      <ol>
 		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"Shifted and Convolutive Source-Filter Non-Negative Matrix Factorization for Monaural Audio Source Separation,"</b> <em> Proc. 41st IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 489--493, Mar. 2016.
+		  <br>
+		  <img src="./images/pdf-icon.png" height="18px"></img>
+		  <a href="pdf/paper/Nakamura2016ICASSP03.pdf">[PDF file]</a>.
 		</li>
 		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"L_p-Norm Non-Negative Matrix Factorization and Its Application to Singing Voice Enhancement,"</b> <em>Proc. 40th IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 2115--2119, MLSP-P4.1, Apr. 2015.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2015ICASSP04.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Nakamura2015ICASSP04.pdf">[PDF file]</a>.
 		</li>
 		<li><U>Tomohiko Nakamura</U>, Kotaro Shikata, Norihiro Takamune and Hirokazu Kameoka, <b>"Harmonic-Temporal Factor Decomposition Incorporating Music Prior Information for Informed Monaural Souce Separation,"</b> <em>Proc. 15th International Society for Music Information Retrieval Conference (ISMIR2014),</em> pp. 623--628, Oct. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2014ISMIR10.pdf">[PDF file]</a>,
+		  <a href="pdf/paper/Nakamura2014ISMIR10.pdf">[PDF file]</a>,
 		  &nbsp;
 		  <img src="./images/8beat.png" height="18px"></img>
 		  <a href="demo/HTFD.html">[Demo Page]</a>,
@@ -220,8 +244,9 @@
 		  Hirokazu Kameoka,
 		  <b>"A Unified Approach for Underdetermined Blind Signal Separation and Source Activity Detection by Multichannel Factorial Hidden Markov Models,"</b>
 		  <em>Proc. 15th Annual Conference of the International Speech Communication Association (Interspeech2014)</em>, pp. 850--854, Sep. 2014.
+		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Higuchi2014Interspeech09.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Higuchi2014Interspeech09.pdf">[PDF file]</a>.
 		</li>
 		<li><U>Tomohiko Nakamura</U> and Hirokazu Kameoka, <b>"Fast Signal
 		    Reconstruction from Magnitude Spectrogram of Continuous
@@ -229,7 +254,7 @@
 		  <em>Proc. 17th International Conference on Digital Audio Effects (DAFx-14)</em>, pp. 129--135, Sep. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2014DAFx09.pdf">[PDF file]</a>,
+		  <a href="pdf/paper/Nakamura2014DAFx09.pdf">[PDF file]</a>,
 		  &nbsp;
 		  <img src="./images/8beat.png" height="18px"></img>
 		  <a href="demo/fastCWT.html">[Demo Page]</a>,
@@ -245,7 +270,7 @@
 		  May, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2014ICASSP05.pdf">[PDF file]</a>,
+		  <a href="pdf/paper/Nakamura2014ICASSP05.pdf">[PDF file]</a>,
 		  &nbsp;
 		  <img src="./images/8beat.png" height="18px"></img>
 		  <a href="demo/TimbreReplacer.html">[Demo Page]</a>.
@@ -260,7 +285,7 @@
 		  SAM-L2, May, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Higuchi2014ICASSP05.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Higuchi2014ICASSP05.pdf">[PDF file]</a>.
 		</li>
 		<li>Shigeki Sagayama, <U>Tomohiko Nakamura</U>, Eita Nakamura, Yasuyuki Saito, Hirokazu Kameoka and Nobutaka Ono, <b>"Automatic Music Accompaniment Allowing Errors and Arbitrary Repeats and Jumps,"</b> <em>Proc. Meetings on Acoustics (POMA)</em>, vol, 21, 035003, 2014.
 		  <br>
@@ -276,8 +301,8 @@
 		  <em>Proc. Sound and Music Computing Conference (SMC2013)</em>, 166, Aug. 2013. 
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  [<a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2013SMC08.pdf">PDF file,</a>, <a href="http://smcnetwork.org/node/1754">Proceeding</a>]
-		  <br>
+		  [<a href="pdf/paper/Nakamura2013SMC08.pdf">PDF
+		  file</a>, <a href="http://smcnetwork.org/node/1754">Proceeding</a>], 
 		  <img src="./images/8beat.png" height="18px"></img>
 		  <a href="demo/automatic_accompaniment.html">[Demo Page]</a>,
 		  <br><font color="#0000CD">[Supported by the Telecommunications Advancement Foundation]</font>.
@@ -296,7 +321,7 @@
 		    to Audio and Acoustics (WASPAA)</em>, pp. 325-328, Oct. 2011. 
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/MNakano2011WASPAA10.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/MNakano2011WASPAA10.pdf">[PDF file]</a>.
 		</li>
 		<li><U>Tomohiko Nakamura</U>, Shinji Hara and Yutaka Hori,
 		  <b>"Local Stability Analysis for a class of Quorum-Sensing Networks with Cyclic Gene Regulatory Networks,"</b> <em>Proc. SICE Annual Conference</em>, Sep. 2011. 
@@ -309,36 +334,56 @@
 	    </li>
 	    <li><h4>Domestic Conferences (in Japanese)</h4>
 	      <ol>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分解に基づく欠損データ補間による超解像声道スペクトル推定法,"</b> <em>電子情報通信学会技術研究報告</em>, to appear, Mar. 2016.
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"高速近似連続ウェーブレット変換による振幅スペクトログラムに対する実時間位相推定法,"</b> <em>日本音響学会2016年春季研究発表会</em>, to appear, Mar. 2016.
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分
+		解に基づく欠損データ補間による超解像声道スペクトル推定
+		法,"</b> <em>電子情報通信学会技術研究報告</em>,
+		  vol. 115, 523, SP2015-111, pp. 99--104, Mar. 2016.
 		</li>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分解に基づく欠損データ補間による声道スペクトル推定法の検討,"</b> <em>日本音響学会2016年春季研究発表会</em>, to appear, Mar. 2016.
-		</li>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"全極スペクトルモデルと擬似周期信号モデルのウェーブレット変換表現を用いた多重音スペクトログラムの調波時間因子分解,"</b> <em>情報処理学会研究報告</em>, 2015-MUS-107 (50), May. 2015.
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"高速近似連続ウェー
+		ブレット変換による振幅スペクトログラムに対する実時間位
+		相推定法,"</b> <em>日本音響学会2016年春季研究発表
+		    会</em>, pp. 933--936, Mar. 2016.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2015MUS05.pdf">[PDF file]</a>,
+		  <a href="pdf/paper/Nakamura2016ASJ03A.pdf">[PDF file]</a>.
+		</li>
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分
+		解に基づく欠損データ補間による声道スペクトル推定法の検
+		討,"</b> <em>日本音響学会2016年春季研究発表会</em>,
+		  pp. 393--396, Mar. 2016.
+		  <br>
+		  <img src="./images/pdf-icon.png" height="18px"></img>
+		  <a href="pdf/paper/Nakamura2016ASJ03B.pdf">[PDF file]</a>.
+		</li>
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"全極スペクトルモ
+		    デルと擬似周期信号モデルのウェーブレット変換表現を用い
+		    た多重音スペクトログラムの調波時間因子分解,"</b> <em>
+		    情報処理学会研究報告</em>, 2015-MUS-107 (50),
+		  May. 2015.
+		  <br>
+		  <img src="./images/pdf-icon.png" height="18px"></img>
+		  <a href="pdf/paper/Nakamura2015MUS05.pdf">[PDF file]</a>,
 		  <br><font color="#0000CD">[音学シンポジウム2015年ポスター賞]</font>.
 		</li>
 		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"全極スペクトルモデルを用いた調波時間因子分解による多重音解析,"</b> <em>情報処理学会研究報告</em>, 2016-MUS-106 (26), Mar. 2015.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a
-		     href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2015MUS03.pdf">[PDF file]</a>.
+		     href="pdf/paper/Nakamura2015MUS03.pdf">[PDF file]</a>.
 		</li>
 		<li><U>中村 友彦</U>, 吉井 和佳, 後藤 真孝, 亀岡 弘和, <b>"音楽音響信号中の調波音の
 		    周波数特性およびドラムの音色の置換システム,"</b>
 		  <em>情報処理学会研究報告</em>, 2014-MUS-104 (11), Aug. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2014MUS08.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Nakamura2014MUS08.pdf">[PDF file]</a>.
 		</li>
 		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"無矛盾性規
 		    準に基づく連続ウェーブレット変換スペクト
 		    ログラムへの位相推定法と高速化,"</b> <em>情報処理学会研究報告</em>, 2014-MUS-103 (41), May, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2014MUS05.pdf">[PDF file]</a>,
+		  <a href="pdf/paper/Nakamura2014MUS05.pdf">[PDF file]</a>,
 		  <br><font color="#0000CD">[2015年度山下記念研究賞]</font>.
 		</li>
 		<li>樋口 卓也, 高宗 典玄, <U>中村 友彦</U>,
@@ -347,7 +392,7 @@
 		    ブラインド音源分離,"</b> <em>電気情報通信学会技術研究報告</em>, vol. 114, no. 52, pp. 211--216, May, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Higuchi2014SP05.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Higuchi2014SP05.pdf">[PDF file]</a>.
 		</li>
 		<li>四方 紘太郎, 高宗 典玄, <U>中村 友彦</U>,
 		  亀岡 弘和,
@@ -355,7 +400,7 @@
 		    多重音解析,"</b> <em>情報処理学会研究報告</em>, 2014-MUS-103 (18), May, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Shikata2014MUS05.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Shikata2014MUS05.pdf">[PDF file]</a>.
 		</li>
 		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"連続ウェー
 		    ブレット変換の高速近似アルゴリズムに基づ
@@ -364,7 +409,7 @@
 		    講演集</em>, 3-2-15, Mar. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2014ASJ03a.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Nakamura2014ASJ03a.pdf">[PDF file]</a>.
 		</li>
 		<li><U>中村 友彦</U>, 吉井 和佳, 後藤 真孝, 亀
 		  岡 弘和, <b>"音楽音響信号に含まれる調波音の
@@ -373,7 +418,7 @@
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a
-		     href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2014ASJ03.pdf">[PDF file]</a>,
+		     href="pdf/paper/Nakamura2014ASJ03.pdf">[PDF file]</a>,
 		  <br><font color="#0000CD">[学生優秀発表賞]</font>.
 		</li>
 		<li>四方紘太郎, 高宗 典玄, <U>中村 友彦</U>,
@@ -381,12 +426,12 @@
 		  Mar. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Shikata2014ASJ03.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Shikata2014ASJ03.pdf">[PDF file]</a>.
 		</li>
 		<li>樋口 卓哉, 高宗 典玄, <U>中村 友彦</U>, 亀岡 弘和, <b>"DOA-HMMに基づく劣決定ブラインド音源分離,"</b> <em>日本音響学会秋季研究発表会講演集</em>, 1-8-7, Sep. 2013. 
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Higuchi2013ASJ10.pdf">[PDF file]</a>.
+		  <a href="pdf/paper/Higuchi2013ASJ10.pdf">[PDF file]</a>.
 		</li>
 		<li><U>中村 友彦</U>, 中村 栄太, 嵯峨山 茂樹,
 		  <b>"誤り・任意の弾き直し・弾き飛ばしを含む
@@ -395,12 +440,12 @@
 		  (40), May, 2013.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2013MUS05.pdf">[PDF file]</a>
+		  <a href="pdf/paper/Nakamura2013MUS05.pdf">[PDF file]</a>
 		</li>
 		<li><U>中村 友彦</U>, 中村 栄太, 嵯峨山 茂樹, <b>"弾き直し・弾き飛ばしを含む音楽演奏への高速な音響入力楽譜追跡,"</b> <em>情報処理学会 第75回全国大会</em>, Mar, 2013.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2013IPSJ03.pdf">[PDF file]</a>
+		  <a href="pdf/paper/Nakamura2013IPSJ03.pdf">[PDF file]</a>
 		  <br><font color="#0000CD">[学生奨励賞]</font>
 		</li>
 		<li>
@@ -409,7 +454,7 @@
 		  樹, <b>"音楽演奏の誤りや反復に頑健な音響入力自動伴奏,"</b> <em>日本音響学会秋季研究発表会講演集</em>, 2-10-6, 20, pp. 931-934, Sep. 2012.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
-		  <a href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/Nakamura2012ASJ09.pdf">[PDF file]</a>
+		  <a href="pdf/paper/Nakamura2012ASJ09.pdf">[PDF file]</a>
 		</li>
 		<li>中野 允裕, ルルー ジョナトン, 亀岡 弘和,
 		  <u>中村 友彦</u>, 小野 順貴, 嵯峨山 茂樹,
@@ -420,7 +465,7 @@
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a
-		     href="http://hil.t.u-tokyo.ac.jp/~nakamura/pdf/paper/MNakano2011MUS07.pdf">[PDF file]</a>
+		     href="pdf/paper/MNakano2011MUS07.pdf">[PDF file]</a>
 		</li>
 	      </ol>
 	      <br>
@@ -432,7 +477,6 @@
 		  <em>OngaCRESTシンポジウム2014 -音楽情報処理研究が切り拓く未来を探る-,</em>
 		  Aug. 23, 2014. 
 		  <br>
-		  <br>
 		  <ul>
 		    <li><a href="http://ongacrest.jp/">OngaCREST Homepage</a></li>
 		    <li><a href="http://av.watch.impress.co.jp/docs/series/dal/20140825_663420.html">「人型ロボットのダンス」や「声の年齢制御」など、音楽情報処理の最先端をレポート - 藤本健のDigital Audio Laboratory</a></li>
@@ -440,19 +484,30 @@
 		  </ul>
 		</li>
 	      </ol>
+	      <br>
 	    <li><h4>Dissertations</h4>
 	      <ol>
 		<li> Ph.D Thesis:
 		  <br>
-		  <U>Tomohiko Nakamura</U>, <b>"Source-Filter Representation and Phase Estimation in Continuous Wavelet Transform in Continuous Wavelet Transform Domain for Monaural Music Audio Editing,"</b>, the University of Tokyo, Mar. 2016.
+		  <U>Tomohiko Nakamura</U>, <b>"Source-Filter
+		  Representation and Phase Estimation in Continuous
+		    Wavelet Transform Domain for Monaural Music Audio
+		    Editing,"</b>, the University of Tokyo, Mar. 2016.
+		  <br><font color="#0000CD">
+		    [東京大学大学院情報理工学系研究科　研究科長賞]</font>.
 		</li>
 		<li> Master's Thesis:
 		  <br>
-		  <U>Tomohiko Nakamura</U>, <b>"Fast Score Following to Acoustic Signal of Musical Performance with Errors, Repeats and Skips,"</b>, The university of Tokyo, Mar, 2013, in Japanese.
+		  <U>Tomohiko Nakamura</U>, <b>"Fast Score Following
+		  to Acoustic Signal of Musical Performance with
+		  Errors, Repeats and Skips,"</b>, the University of
+		  Tokyo, Mar, 2013, in Japanese.
 		</li>
 		<li> Bachelor's Thesis: <br>
 		  <U>Tomohiko Nakamkura</U>, <b>"Local Stability Analysis
-		    of Cell-to-Cell Networks with Cyclic Gene Regulatory Networks,"</b> The university of Tokyo, Mar, 2011, in Japanese.
+		    of Cell-to-Cell Networks with Cyclic Gene
+		    Regulatory Networks,"</b> the University of Tokyo,
+		  Mar, 2011, in Japanese.
 		</li>
 	      </ol>
 	      <br>
