--- a/index.html
+++ b/index.html
@@ -334,32 +334,19 @@
 	    </li>
 	    <li><h4>Domestic Conferences (in Japanese)</h4>
 	      <ol>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分
-		解に基づく欠損データ補間による超解像声道スペクトル推定
-		法,"</b> <em>電子情報通信学会技術研究報告</em>,
-		  vol. 115, 523, SP2015-111, pp. 99--104, Mar. 2016.
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分解に基づく欠損データ補間による超解像声道スペクトル推定法,"</b> <em>電子情報通信学会技術研究報告</em>, vol. 115, 523, SP2015-111, pp. 99--104, Mar. 2016.
 		</li>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"高速近似連続ウェー
-		ブレット変換による振幅スペクトログラムに対する実時間位
-		相推定法,"</b> <em>日本音響学会2016年春季研究発表
-		    会</em>, pp. 933--936, Mar. 2016.
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"高速近似連続ウェーブレット変換による振幅スペクトログラムに対する実時間位相推定法,"</b> <em>日本音響学会2016年春季研究発表会</em>, pp. 933--936, Mar. 2016.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Nakamura2016ASJ03A.pdf">[PDF file]</a>.
 		</li>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分
-		解に基づく欠損データ補間による声道スペクトル推定法の検
-		討,"</b> <em>日本音響学会2016年春季研究発表会</em>,
-		  pp. 393--396, Mar. 2016.
-		  <br>
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分解に基づく欠損データ補間による声道スペクトル推定法の検討,"</b> <em>日本音響学会2016年春季研究発表会</em>, pp. 393--396, Mar. 2016.
+			<br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Nakamura2016ASJ03B.pdf">[PDF file]</a>.
 		</li>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"全極スペクトルモ
-		    デルと擬似周期信号モデルのウェーブレット変換表現を用い
-		    た多重音スペクトログラムの調波時間因子分解,"</b> <em>
-		    情報処理学会研究報告</em>, 2015-MUS-107 (50),
-		  May. 2015.
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"全極スペクトルモデルと擬似周期信号モデルのウェーブレット変換表現を用いた多重音スペクトログラムの調波時間因子分解,"</b> <em>情報処理学会研究報告</em>, 2015-MUS-107 (50), May. 2015.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Nakamura2015MUS05.pdf">[PDF file]</a>,
@@ -371,59 +358,40 @@
 		  <a
 		     href="pdf/paper/Nakamura2015MUS03.pdf">[PDF file]</a>.
 		</li>
-		<li><U>中村 友彦</U>, 吉井 和佳, 後藤 真孝, 亀岡 弘和, <b>"音楽音響信号中の調波音の
-		    周波数特性およびドラムの音色の置換システム,"</b>
-		  <em>情報処理学会研究報告</em>, 2014-MUS-104 (11), Aug. 2014.
+		<li><U>中村 友彦</U>, 吉井 和佳, 後藤 真孝, 亀岡 弘和, <b>"音楽音響信号中の調波音の周波数特性およびドラムの音色の置換システム,"</b> <em>情報処理学会研究報告</em>, 2014-MUS-104 (11), Aug. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Nakamura2014MUS08.pdf">[PDF file]</a>.
 		</li>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"無矛盾性規
-		    準に基づく連続ウェーブレット変換スペクト
-		    ログラムへの位相推定法と高速化,"</b> <em>情報処理学会研究報告</em>, 2014-MUS-103 (41), May, 2014.
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"無矛盾性規準に基づく連続ウェーブレット変換スペクトログラムへの位相推定法と高速化,"</b> <em>情報処理学会研究報告</em>, 2014-MUS-103 (41), May, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Nakamura2014MUS05.pdf">[PDF file]</a>,
 		  <br><font color="#0000CD">[2015年度山下記念研究賞]</font>.
 		</li>
-		<li>樋口 卓也, 高宗 典玄, <U>中村 友彦</U>,
-		  亀岡 弘和,
-		  <b>"確率的モデル化に基づく移動音源の劣決定
-		    ブラインド音源分離,"</b> <em>電気情報通信学会技術研究報告</em>, vol. 114, no. 52, pp. 211--216, May, 2014.
+		<li>樋口 卓也, 高宗 典玄, <U>中村 友彦</U>, 亀岡 弘和, <b>"確率的モデル化に基づく移動音源の劣決定ブラインド音源分離,"</b> <em>電気情報通信学会技術研究報告</em>, vol. 114, no. 52, pp. 211--216, May, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Higuchi2014SP05.pdf">[PDF file]</a>.
 		</li>
-		<li>四方 紘太郎, 高宗 典玄, <U>中村 友彦</U>,
-		  亀岡 弘和,
-		  <b>"調波時間因子分解法に基づく事前情報付き
-		    多重音解析,"</b> <em>情報処理学会研究報告</em>, 2014-MUS-103 (18), May, 2014.
+		<li>四方 紘太郎, 高宗 典玄, <U>中村 友彦</U>, 亀岡 弘和, <b>"調波時間因子分解法に基づく事前情報付き多重音解析,"</b> <em>情報処理学会研究報告</em>, 2014-MUS-103 (18), May, 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Shikata2014MUS05.pdf">[PDF file]</a>.
 		</li>
-		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"連続ウェー
-		    ブレット変換の高速近似アルゴリズムに基づ
-		    く振幅スケーログラムへの無矛盾位相付加法
-		    の検討,"</b> <em>日本音響学会春季研究発表会
-		    講演集</em>, 3-2-15, Mar. 2014.
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"連続ウェーブレット変換の高速近似アルゴリズムに基づく振幅スケーログラムへの無矛盾位相付加法の検討,"</b> <em>日本音響学会春季研究発表会講演集</em>, 3-2-15, Mar. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Nakamura2014ASJ03a.pdf">[PDF file]</a>.
 		</li>
-		<li><U>中村 友彦</U>, 吉井 和佳, 後藤 真孝, 亀
-		  岡 弘和, <b>"音楽音響信号に含まれる調波音の
-		    周波数特性とドラムの音色の転写システム,"</b>
-		  <em>日本音響学会春季研究発表会講演集</em>, 3-5-5, Mar. 2014.
+		<li><U>中村 友彦</U>, 吉井 和佳, 後藤 真孝, 亀岡 弘和, <b>"音楽音響信号に含まれる調波音の周波数特性とドラムの音色の転写システム,"</b> <em>日本音響学会春季研究発表会講演集</em>, 3-5-5, Mar. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a
 		     href="pdf/paper/Nakamura2014ASJ03.pdf">[PDF file]</a>,
 		  <br><font color="#0000CD">[学生優秀発表賞]</font>.
 		</li>
-		<li>四方紘太郎, 高宗 典玄, <U>中村 友彦</U>,
-		  亀岡 弘和, <b>"調波時間因子分解に基づく音楽事前情報付き多重音解析,"</b> <em>日本音響学会春季研究発表会講演集</em>, 3-5-7,
-		  Mar. 2014.
+		<li>四方紘太郎, 高宗 典玄, <U>中村 友彦</U>, 亀岡 弘和, <b>"調波時間因子分解に基づく音楽事前情報付き多重音解析,"</b> <em>日本音響学会春季研究発表会講演集</em>, 3-5-7, Mar. 2014.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Shikata2014ASJ03.pdf">[PDF file]</a>.
@@ -433,11 +401,7 @@
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Higuchi2013ASJ10.pdf">[PDF file]</a>.
 		</li>
-		<li><U>中村 友彦</U>, 中村 栄太, 嵯峨山 茂樹,
-		  <b>"誤り・任意の弾き直し・弾き飛ばしを含む
-		    演奏音響信号への高速な楽譜追跡,"</b> <em>情
-		    報処理学会研究報告</em>, 2013-MUS-99
-		  (40), May, 2013.
+		<li><U>中村 友彦</U>, 中村 栄太, 嵯峨山 茂樹, <b>"誤り・任意の弾き直し・弾き飛ばしを含む演奏音響信号への高速な楽譜追跡,"</b> <em>情報処理学会研究報告</em>, 2013-MUS-99 (40), May, 2013.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Nakamura2013MUS05.pdf">[PDF file]</a>
@@ -449,19 +413,12 @@
 		  <br><font color="#0000CD">[学生奨励賞]</font>
 		</li>
 		<li>
-		  <U>中村 友彦</U>, 水野 優, 鈴木 孝輔,
-		  中村 栄太, 樋口 祐介, 深山 覚, 嵯峨山 茂
-		  樹, <b>"音楽演奏の誤りや反復に頑健な音響入力自動伴奏,"</b> <em>日本音響学会秋季研究発表会講演集</em>, 2-10-6, 20, pp. 931-934, Sep. 2012.
+		  <U>中村 友彦</U>, 水野 優, 鈴木 孝輔, 中村 栄太, 樋口 祐介, 深山 覚, 嵯峨山 茂樹, <b>"音楽演奏の誤りや反復に頑健な音響入力自動伴奏,"</b> <em>日本音響学会秋季研究発表会講演集</em>, 2-10-6, 20, pp. 931-934, Sep. 2012.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a href="pdf/paper/Nakamura2012ASJ09.pdf">[PDF file]</a>
 		</li>
-		<li>中野 允裕, ルルー ジョナトン, 亀岡 弘和,
-		  <u>中村 友彦</u>, 小野 順貴, 嵯峨山 茂樹,
-		  <b>"スペクトログラムのベイジアンノンパラメ
-		    トリックモデリングに基づく音楽信号の解析,"</b>
-		  <em>情報処理学会研究報告</em>,
-		  2011-MUS-91 (6), Jul. 2011.
+		<li>中野 允裕, ルルー ジョナトン, 亀岡 弘和, <u>中村 友彦</u>, 小野 順貴, 嵯峨山 茂樹, <b>"スペクトログラムのベイジアンノンパラメトリックモデリングに基づく音楽信号の解析,"</b> <em>情報処理学会研究報告</em>, 2011-MUS-91 (6), Jul. 2011.
 		  <br>
 		  <img src="./images/pdf-icon.png" height="18px"></img>
 		  <a
@@ -472,10 +429,7 @@
 	    </li>
 	    <li><h4>Symposium (in Japanese)</h4>
 	      <ol>
-		<li><U>中村 友彦</U>, 吉井 和佳, 後藤 真孝, 亀岡 弘和,
-		  <b>"音楽音響信号中の調波音の周波数特性およびドラムの音色の置換システム,"</b>
-		  <em>OngaCRESTシンポジウム2014 -音楽情報処理研究が切り拓く未来を探る-,</em>
-		  Aug. 23, 2014. 
+		<li><U>中村 友彦</U>, 吉井 和佳, 後藤 真孝, 亀岡 弘和, <b>"音楽音響信号中の調波音の周波数特性およびドラムの音色の置換システム,"</b> <em>OngaCRESTシンポジウム2014 -音楽情報処理研究が切り拓く未来を探る-,</em> Aug. 23, 2014. 
 		  <br>
 		  <ul>
 		    <li><a href="http://ongacrest.jp/">OngaCREST Homepage</a></li>
