--- a/index.html
+++ b/index.html
@@ -306,8 +306,21 @@
 	    </div>
 	    <div id="domestics">
 	      <h4>Domestic Conferences</h4>
-					      <ol>
+	      <ol>
+		<li>竹川 佳成, 植村 あい子, 奥村 健太, 高道 慎之介, <U>中村 友彦</U>, 平井 辰典, 森尻 有貴, 矢澤 櫻子, <b>"新博士によるパネルディスカッションV 「新博士さんいらっしゃい!」,"</b> <em>情報処理学会研究報告</em>, 2016-MUS-112 (10), pp. 1--6, Aug. 2016.
+		  <br>
+		  <img src="./images/pdf-icon.png" height="18px"></img>
+		  <a href="pdf/paper/Nakamura2016MUS08.pdf">[PDF file]</a>.
+		</li>
+		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"高速近似連続ウェーブレット変換による振幅スペクトログラムからの逐次位相推定法,"</b> <em>情報処理学会研究報告</em>, 2016-MUS-111 (47), pp. 1--5, May 2016.
+		  <br>
+		  <img src="./images/pdf-icon.png" height="18px"></img>
+		  <a href="pdf/paper/Nakamura2016MUS05.pdf">[PDF file]</a>.
+		</li>
 		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"非負値行列因子分解に基づく欠損データ補間による超解像声道スペクトル推定法,"</b> <em>電子情報通信学会技術研究報告</em>, vol. 115, 523, SP2015-111, pp. 99--104, Mar. 2016.
+		  <br>
+		  <img src="./images/pdf-icon.png" height="18px"></img>
+		  <a href="pdf/paper/Nakamura2016IEICESP03.pdf">[PDF file]</a>.
 		</li>
 		<li><U>中村 友彦</U>, 亀岡 弘和, <b>"高速近似連続ウェーブレット変換による振幅スペクトログラムに対する実時間位相推定法,"</b> <em>日本音響学会2016年春季研究発表会</em>, pp. 933--936, Mar. 2016.
 		  <br>
