--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 								<a href="https://www.jstage.jst.go.jp/article/jcmsi/7/3/7_133/_article">[J-Stage]</a>,
 								<a href="pdf/bib/TNakamura201605JCMSI.bib">[.bib]</a>.
 								<br>
-								<font color="#0000CD">[2015年計測自動制御学会 論文賞（武田賞）]</font>
+								<font color="#0000CD">[2015年計測自動制御学会 論文賞 (武田賞) ]</font>
 							</li>
 							<li>Eita Nakamura, <U>Tomohiko Nakamura</U>, Yasuyuki Saito, Nobutaka Ono and Shigeki
 								Sagayama,
@@ -581,7 +581,6 @@
 								</ul>
 							</li>
 						</ol>
-
 					</div>
 					<div id="theses">
 						<h3>Theses</h3>
@@ -610,12 +609,19 @@
 							</li>
 						</ol>
 					</div>
+					<div id="patent">
+						<h3>Patents</h3>
+						<ol>
+							<li>伊藤 忠彦, <U>中村 友彦</U>, 島岡 政基, "証明書管理装置," 特開2019-57755.
+							<li>亀岡 弘和, <U>中村 友彦</U>, "声道スペクトル推定装置、声道スペクトル推定方法、及びプログラム," 特願2017-151188, 特許第6420781号.
+						</ol>
+					</div>
 					<div id="awards">
 						<h3>Awards</h3>
 						<ol>
 							<li>情報処理学会 2015年度研究会推薦博士論文</li>
 							<li>2015年度 東京大学 大学院情報理工学系研究科 研究科長賞
-							<li>2015年計測自動制御学会 論文賞（武田賞）
+							<li>2015年計測自動制御学会 論文賞 (武田賞)
 							<li>情報処理学会 2015年度山下記念研究賞
 							<li>音学シンポジウム2015年ポスター賞
 							<li>日本音響学会2014年春季研究発表会 学生優秀発表賞
@@ -631,9 +637,9 @@
 							<li>Grant-in-Aid for JSPS Fellows (DC2), "人間の聴覚システムの模倣に基づく自律的音響信号処理の研究," Grant No. 15J09992,
 								(Apr. 2015 to Mar. 2016).</li>
 							<li>Research Fellowship for Young Scientists DC2 (Apr. 2015 to Mar. 2016)</li>
-							<li>立石科学技術振興財団 後期国際交流助成（2014年10月）
-							<li>原総合知的通信システム基金 第46回国際論文発表者助成（2014年9月）
-							<li>電気通信普及財団による海外渡航旅費援助(2013年8月)
+							<li>立石科学技術振興財団 後期国際交流助成 (Oct. 2014.)
+							<li>原総合知的通信システム基金 第46回国際論文発表者助成 (Sept. 2014.)
+							<li>電気通信普及財団による海外渡航旅費援助 (Aug. 2013.)
 						</ol>
 					</div>
 				</div>
